test/sematest/valid/sysout.java

class Foo {
  public static void main(String[] args) {
    int a;
    int b;
    int c;

    System.out.println(10);
    System.out.ptinrln(a);
    System.out.println(a + b);
    System.out.println(c = a + b);
  }
}
