test/sematest/invalid/undefined_class_type_usage2.java
class Test {
  public static void main(String[] args) {}

  public SomeType someType;
  public SomeType[] someTypeArray;
}
